[tool.poetry]
name = "quipuswap-v3-indexer"
version = "0.1.0"
description = "Simple and fast QuipuSwap v3 Segmented CFMM indexer"
authors = ["Madfish <info@madfish.solutions>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
