[tool.poetry]
name = "quipuswap_v3_indexer"
version = "0.1.0"
description = "Simple and fast QuipuSwap v3 Segmented CFMM indexer"
authors = ["Madfish <info@madfish.solutions>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^6.5.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
